<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tfg.lostandfound.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_register_scren"
        android:id="@+id/lbl_register_scren"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:ems="10"
        android:id="@+id/txt_username"
        android:layout_below="@+id/lbl_register_scren"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txt_email"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txt_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:ems="10"
        android:id="@+id/txt_password"
        android:layout_below="@+id/txt_username"
        android:layout_alignStart="@+id/txt_username"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_item"
        android:id="@+id/btn_save"
        android:layout_below="@+id/txt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

</RelativeLayout>
