<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tfg.lostandfound.LogInActivity">

    <ImageView
        android:src="@drawable/LAF"
        android:layout_marginTop="50px"
        android:layout_marginLeft="200px"
        android:layout_width="250px"
        android:layout_height="250px"
        android:id="@+id/imageView" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_txt"
        android:id="@+id/btn_login"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/editText2" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_txt"
        android:id="@+id/button"
        android:layout_below="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/btn_login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/txt_username_txt"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/imageView" />

    <EditText
        android:hint="@string/txt_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/editText" />

</RelativeLayout>
